@@ -16,7 +16,10 @@
 
 package org.springframework.boot.gradle.tasks.run;
 
+import java.lang.reflect.Method;
+
 import org.gradle.api.file.SourceDirectorySet;
+import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetOutput;
@@ -28,6 +31,29 @@ import org.gradle.api.tasks.SourceSetOutput;
  * @since 2.0.0
  */
 public class BootRun extends JavaExec {
+
+	private boolean optimizedLaunch = true;
+
+	/**
+	 * Returns {@code true} if the JVM's launch should be optimized, otherwise
+	 * {@code false}. Defaults to {@code true}.
+	 * @return whether the JVM's launch should be optimized
+	 * @since 2.2.0
+	 */
+	@Input
+	public boolean isOptimizedLaunch() {
+		return this.optimizedLaunch;
+	}
+
+	/**
+	 * Sets whether the JVM's launch should be optimized. Defaults to {@code true}.
+	 * @param optimizedLaunch {@code true} if the JVM's launch should be optimised,
+	 * otherwise {@code false}
+	 * @since 2.2.0
+	 */
+	public void setOptimizedLaunch(boolean optimizedLaunch) {
+		this.optimizedLaunch = optimizedLaunch;
+	}
 
 	/**
 	 * Adds the {@link SourceDirectorySet#getSrcDirs() source directories} of the given
@@ -43,11 +69,27 @@ public class BootRun extends JavaExec {
 
 	@Override
 	public void exec() {
+		if (this.optimizedLaunch) {
+			setJvmArgs(getJvmArgs());
+			if (!isJava13OrLater()) {
+				jvmArgs("-Xverify:none");
+			}
+			jvmArgs("-XX:TieredStopAtLevel=1");
+		}
 		if (System.console() != null) {
 			// Record that the console is available here for AnsiOutput to detect later
 			this.getEnvironment().put("spring.output.ansi.console-available", true);
 		}
 		super.exec();
+	}
+
+	private boolean isJava13OrLater() {
+		for (Method method : String.class.getMethods()) {
+			if (method.getName().equals("stripIndent")) {
+				return true;
+			}
+		}
+		return false;
 	}
 
 }
